# armature-public

./: .gitattributes  .gitignore  CLAUDE.md  CODEX.md  LICENSE  Makefile  README.md  agents.md  pyproject.toml
.armature/: .gitignore  ARMATURE.md  agents.md  antipatterns.md  cascade-rules.yaml  ci.yaml  config.yaml  journal.md  lessons.yaml
.armature/disciplines/: abstraction-rules.md  adr-process.md  clean-code.md  code-review.md  data-handling.md  definition-of-done.md  error-handling.md  guardrail-rules.md  interactive-user-input.md  layer-boundaries.md  llm-evaluation-criteria.md  metrics.md  owasp-checklist.md  python-conventions.md  sdlc-phases.md  tdd-workflow.md  test-naming.md  testing-standards.md  triggers.yaml  typing.md
.armature/hooks/: auto-reviewer.sh  block-config-changes.sh  block-dangerous-commands.sh  cascade-ci.sh  check-cascade.sh  check-required-reading.sh  harness-feedback.sh  inject-context.sh  mark-dirty.sh  phase-gate.sh  post-stop.sh  pre-pr-create.sh  precommit-cascade-gate.sh  reinject-context.sh  run-ci.sh  task-completion.sh  task-readiness.sh  tdd-gate.sh  tier0-preflight.sh
.armature/invariants/: invariants.md  registry.yaml
.armature/personas/: orchestrator.md  planner.md  reviewer-redteam.md  reviewer.md
.armature/postmortems/: README.md
.armature/reviews/: checkpoint-1-hooks-redteam.md  checkpoint-1-hooks.md  checkpoint-2-integration.md  full-hook-review-cycle-2-redteam.md
.armature/templates/: CODEX.md.tmpl  agents.md.tmpl  claude-pr-fix.yml.tmpl  codex-hooks.json.tmpl  persona.md.tmpl  settings-hooks.json.tmpl
(+50 files in other folders)
